fix: rebuild site

--- a/site/index.html
+++ b/site/index.html
@@ -20,265 +20,191 @@
     <div class="background-gradient"></div>
     <div class="card-container">
 <div class="card" data-start-time="1719583200" data-end-time="1719799200">
-    <img src="assets/cards/ceo20246.webp" alt="CEO 2024 banner image" class="image">
-    <div class="card-content">
-        <h2>CEO 2024</h2>
-        <h4>June 28 - June 30</h4>
-        <div class="featured-players">
-            <u>Featured Players</u>
-            <ul class="featured-players-columns">
-                <li>Jmook</li>
-                <li>Wizzrobe</li>
-                <li>MOF</li>
-                <li>Gahtzu</li>
-                <li>Hungrybox</li>
-                <li>Panda</li>
-                <li>CPU0</li>
-                <li>Voo</li>
-            </ul>
-        </div>
-        <hr>
-        <p>
-          <a class="card-location"
-            href="https://www.google.com/maps/search/?api=1&query=101%20N%20Atlantic%20Ave%2C%20Daytona%20Beach%2C%20FL%2032118%2C%20USA"
-            target="_blank"
-            data-umami-event="map-link-clicked"
-            data-umami-event-location="Daytona Beach, FL">
-            Daytona Beach, FL
-          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 158
-        </p>
-        <hr>
-        <div class="buttons">
-            <a href="https://www.start.gg/tournament/ceo-2024-6"
-              target="_blank"
-              class="card-button"
-              data-umami-event="start-gg-clicked"
-              data-umami-event-name="CEO 2024"
-            >Start.gg</a>
-            <a href="https://ceogaming.org/ceo/#:~:text=CEO%202024%20GENERAL%20EVENT%20SCHEDULE"
-              target="_blank"
-              class="card-button"
-              data-umami-event="schedule-clicked"
-              data-umami-event-name="CEO 2024"
-            >Schedule</a>
-            <a href=""
-              target="_blank"
-              class="card-button hidden"
-              data-umami-event="stream-clicked"
-              data-umami-event-name="CEO 2024"
-            >Stream</a>
-        </div>
+  <img src="assets/cards/ceo20246.webp" alt="CEO 2024 banner image" class="image">
+  <div class="card-content">
+    <h2>CEO 2024</h2>
+    <h4>June 28 - June 30</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Jmook</li>
+        <li>Wizzrobe</li>
+        <li>MOF</li>
+        <li>Gahtzu</li>
+        <li>Hungrybox</li>
+        <li>Panda</li>
+        <li>CPU0</li>
+        <li>Voo</li>
+      </ul>
     </div>
+    <hr>
+    <p>
+      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=101%20N%20Atlantic%20Ave%2C%20Daytona%20Beach%2C%20FL%2032118%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
+        data-umami-event-location="Daytona Beach, FL">
+        Daytona Beach, FL
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 158
+    </p>
+    <hr>
+    <div class="buttons">
+      <a href="https://www.start.gg/tournament/ceo-2024-6" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+        data-umami-event-name="CEO 2024">Start.gg</a>
+      <a href="https://ceogaming.org/ceo/#:~:text=CEO%202024%20GENERAL%20EVENT%20SCHEDULE" target="_blank" class="card-button"
+        data-umami-event="schedule-clicked" data-umami-event-name="CEO 2024">Schedule</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="stream-clicked" data-umami-event-name="CEO 2024">Stream</a>
+    </div>
+  </div>
 </div>
 <div class="card" data-start-time="1722038400" data-end-time="1722142740">
-    <img src="assets/cards/warehouseWar4.webp" alt="Warehouse War 4 banner image" class="image">
-    <div class="card-content">
-        <h2>Warehouse War 4</h2>
-        <h4>July 26 - July 27</h4>
-        <div class="featured-players">
-            <u>Featured Players</u>
-            <ul class="featured-players-columns">
-                <li>Cody Schwab</li>
-                <li>Hungrybox</li>
-                <li>Salt</li>
-                <li>Axe</li>
-                <li>Jmook</li>
-                <li>Aklo</li>
-                <li>Magi</li>
-                <li>Zamu</li>
-            </ul>
-        </div>
-        <hr>
-        <p>
-          <a class="card-location"
-            href="https://www.google.com/maps/search/?api=1&query=601%204th%20Ave%20S%2C%20Nashville%2C%20TN%2037210%2C%20USA"
-            target="_blank"
-            data-umami-event="map-link-clicked"
-            data-umami-event-location="Nashville, TN">
-            Nashville, TN
-          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 184
-        </p>
-        <hr>
-        <div class="buttons">
-            <a href="https://www.start.gg/tournament/warehouse-war-4"
-              target="_blank"
-              class="card-button"
-              data-umami-event="start-gg-clicked"
-              data-umami-event-name="Warehouse War 4"
-            >Start.gg</a>
-            <a href="https://images.start.gg/images/profileWidgetPageLayout/2476303/image-d275965ff83672fa785f92237cd9b3fb-optimized.png"
-              target="_blank"
-              class="card-button"
-              data-umami-event="schedule-clicked"
-              data-umami-event-name="Warehouse War 4"
-            >Schedule</a>
-            <a href=""
-              target="_blank"
-              class="card-button hidden"
-              data-umami-event="stream-clicked"
-              data-umami-event-name="Warehouse War 4"
-            >Stream</a>
-        </div>
+  <img src="assets/cards/warehouseWar4.webp" alt="Warehouse War 4 banner image" class="image">
+  <div class="card-content">
+    <h2>Warehouse War 4</h2>
+    <h4>July 26 - July 27</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Cody Schwab</li>
+        <li>Hungrybox</li>
+        <li>Salt</li>
+        <li>Axe</li>
+        <li>Jmook</li>
+        <li>Aklo</li>
+        <li>Magi</li>
+        <li>Zamu</li>
+      </ul>
     </div>
+    <hr>
+    <p>
+      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=601%204th%20Ave%20S%2C%20Nashville%2C%20TN%2037210%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
+        data-umami-event-location="Nashville, TN">
+        Nashville, TN
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 185
+    </p>
+    <hr>
+    <div class="buttons">
+      <a href="https://www.start.gg/tournament/warehouse-war-4" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+        data-umami-event-name="Warehouse War 4">Start.gg</a>
+      <a href="https://images.start.gg/images/profileWidgetPageLayout/2476303/image-d275965ff83672fa785f92237cd9b3fb-optimized.png" target="_blank" class="card-button"
+        data-umami-event="schedule-clicked" data-umami-event-name="Warehouse War 4">Schedule</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="stream-clicked" data-umami-event-name="Warehouse War 4">Stream</a>
+    </div>
+  </div>
 </div>
 <div class="card" data-start-time="1723129200" data-end-time="1723420800">
-    <img src="assets/cards/supernova2024.webp" alt="Supernova 2024 banner image" class="image">
-    <div class="card-content">
-        <h2>Supernova 2024</h2>
-        <h4>August 08 - August 11</h4>
-        <div class="featured-players">
-            <u>Featured Players</u>
-            <ul class="featured-players-columns">
-                <li>TBD</li>
-                <li>TBD</li>
-                <li>TBD</li>
-                <li>TBD</li>
-                <li>TBD</li>
-                <li>TBD</li>
-                <li>TBD</li>
-                <li>TBD</li>
-            </ul>
-        </div>
-        <hr>
-        <p>
-          <a class="card-location"
-            href="https://www.google.com/maps/search/?api=1&query=4320%20Chantilly%20Shopping%20Center%2C%20Chantilly%2C%20VA%2020151%2C%20USA"
-            target="_blank"
-            data-umami-event="map-link-clicked"
-            data-umami-event-location="Chantilly, VA">
-            Chantilly, VA
-          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
-        </p>
-        <hr>
-        <div class="buttons">
-            <a href="https://www.start.gg/tournament/supernova-2024"
-              target="_blank"
-              class="card-button"
-              data-umami-event="start-gg-clicked"
-              data-umami-event-name="Supernova 2024"
-            >Start.gg</a>
-            <a href=""
-              target="_blank"
-              class="card-button hidden"
-              data-umami-event="schedule-clicked"
-              data-umami-event-name="Supernova 2024"
-            >Schedule</a>
-            <a href=""
-              target="_blank"
-              class="card-button hidden"
-              data-umami-event="stream-clicked"
-              data-umami-event-name="Supernova 2024"
-            >Stream</a>
-        </div>
+  <img src="assets/cards/supernova2024.webp" alt="Supernova 2024 banner image" class="image">
+  <div class="card-content">
+    <h2>Supernova 2024</h2>
+    <h4>August 08 - August 11</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+        <li>TBD</li>
+      </ul>
     </div>
+    <hr>
+    <p>
+      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4320%20Chantilly%20Shopping%20Center%2C%20Chantilly%2C%20VA%2020151%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
+        data-umami-event-location="Chantilly, VA">
+        Chantilly, VA
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+    </p>
+    <hr>
+    <div class="buttons">
+      <a href="https://www.start.gg/tournament/supernova-2024" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+        data-umami-event-name="Supernova 2024">Start.gg</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="schedule-clicked" data-umami-event-name="Supernova 2024">Schedule</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="stream-clicked" data-umami-event-name="Supernova 2024">Stream</a>
+    </div>
+  </div>
 </div>
 <div class="card" data-start-time="1724961600" data-end-time="1725260340">
-    <img src="assets/cards/eggdogInvitational.webp" alt="Eggdog Invitational banner image" class="image">
-    <div class="card-content">
-        <h2>Eggdog Invitational</h2>
-        <h4>August 29 - September 02</h4>
-        <div class="featured-players">
-            <u>Featured Players</u>
-            <ul class="featured-players-columns">
-                <li>Cody Schwab</li>
-                <li>moky</li>
-                <li>Hungrybox</li>
-                <li>Wizzrobe</li>
-                <li>Zain</li>
-                <li>aMSa</li>
-                <li>Mang0</li>
-                <li>Aklo</li>
-            </ul>
-        </div>
-        <hr>
-        <p>
-          <a class="card-location"
-            href="https://www.google.com/maps/search/?api=1&query=Vancouver%2C%20BC%2C%20Canada"
-            target="_blank"
-            data-umami-event="map-link-clicked"
-            data-umami-event-location="Vancouver, BC">
-            Vancouver, BC
-          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 12
-        </p>
-        <hr>
-        <div class="buttons">
-            <a href="https://www.start.gg/tournament/eggdog-invitational"
-              target="_blank"
-              class="card-button"
-              data-umami-event="start-gg-clicked"
-              data-umami-event-name="Eggdog Invitational"
-            >Start.gg</a>
-            <a href=""
-              target="_blank"
-              class="card-button hidden"
-              data-umami-event="schedule-clicked"
-              data-umami-event-name="Eggdog Invitational"
-            >Schedule</a>
-            <a href=""
-              target="_blank"
-              class="card-button hidden"
-              data-umami-event="stream-clicked"
-              data-umami-event-name="Eggdog Invitational"
-            >Stream</a>
-        </div>
+  <img src="assets/cards/eggdogInvitational.webp" alt="Eggdog Invitational banner image" class="image">
+  <div class="card-content">
+    <h2>Eggdog Invitational</h2>
+    <h4>August 29 - September 02</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Cody Schwab</li>
+        <li>moky</li>
+        <li>Hungrybox</li>
+        <li>Wizzrobe</li>
+        <li>Zain</li>
+        <li>aMSa</li>
+        <li>Mang0</li>
+        <li>Aklo</li>
+      </ul>
     </div>
+    <hr>
+    <p>
+      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=Vancouver%2C%20BC%2C%20Canada" target="_blank" data-umami-event="map-link-clicked"
+        data-umami-event-location="Vancouver, BC">
+        Vancouver, BC
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 12
+    </p>
+    <hr>
+    <div class="buttons">
+      <a href="https://www.start.gg/tournament/eggdog-invitational" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+        data-umami-event-name="Eggdog Invitational">Start.gg</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="schedule-clicked" data-umami-event-name="Eggdog Invitational">Schedule</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="stream-clicked" data-umami-event-name="Eggdog Invitational">Stream</a>
+    </div>
+  </div>
 </div>
 <div class="card" data-start-time="1731772800" data-end-time="1731913200">
-    <img src="assets/cards/donTParkOnTheGrass2024.webp" alt="Don't Park on the Grass 2024 banner image" class="image">
-    <div class="card-content">
-        <h2>Don't Park on the Grass 2024</h2>
-        <h4>November 16 - November 18</h4>
-        <div class="featured-players">
-            <u>Featured Players</u>
-            <ul class="featured-players-columns">
-                <li>Cody Schwab</li>
-                <li>Wizzrobe</li>
-                <li>Zamu</li>
-                <li>Fiction</li>
-                <li>Plup</li>
-                <li>Salt</li>
-                <li>Spark</li>
-                <li>Krudo</li>
-            </ul>
-        </div>
-        <hr>
-        <p>
-          <a class="card-location"
-            href="https://www.google.com/maps/search/?api=1&query=4001%20E%20Stevens%20Way%20NE%2C%20Seattle%2C%20WA%2098195%2C%20USA"
-            target="_blank"
-            data-umami-event="map-link-clicked"
-            data-umami-event-location="Seattle, WA">
-            Seattle, WA
-          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 344
-        </p>
-        <hr>
-        <div class="buttons">
-            <a href="https://www.start.gg/tournament/don-t-park-on-the-grass-2024"
-              target="_blank"
-              class="card-button"
-              data-umami-event="start-gg-clicked"
-              data-umami-event-name="Don't Park on the Grass 2024"
-            >Start.gg</a>
-            <a href=""
-              target="_blank"
-              class="card-button hidden"
-              data-umami-event="schedule-clicked"
-              data-umami-event-name="Don't Park on the Grass 2024"
-            >Schedule</a>
-            <a href=""
-              target="_blank"
-              class="card-button hidden"
-              data-umami-event="stream-clicked"
-              data-umami-event-name="Don't Park on the Grass 2024"
-            >Stream</a>
-        </div>
+  <img src="assets/cards/donTParkOnTheGrass2024.webp" alt="Don't Park on the Grass 2024 banner image" class="image">
+  <div class="card-content">
+    <h2>Don't Park on the Grass 2024</h2>
+    <h4>November 16 - November 18</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Cody Schwab</li>
+        <li>Wizzrobe</li>
+        <li>Zamu</li>
+        <li>Fiction</li>
+        <li>Plup</li>
+        <li>Salt</li>
+        <li>Spark</li>
+        <li>Krudo</li>
+      </ul>
     </div>
+    <hr>
+    <p>
+      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4001%20E%20Stevens%20Way%20NE%2C%20Seattle%2C%20WA%2098195%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
+        data-umami-event-location="Seattle, WA">
+        Seattle, WA
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 344
+    </p>
+    <hr>
+    <div class="buttons">
+      <a href="https://www.start.gg/tournament/don-t-park-on-the-grass-2024" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+        data-umami-event-name="Don't Park on the Grass 2024">Start.gg</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="schedule-clicked" data-umami-event-name="Don't Park on the Grass 2024">Schedule</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="stream-clicked" data-umami-event-name="Don't Park on the Grass 2024">Stream</a>
+    </div>
+  </div>
 </div>
 </div>
 <footer>
   <div class="footer">
     <div class="calendar-note calendar-note-hidden">
-      <p>want upcoming melee majors on your calendar? add this link as an external url on any online calender service</p>
+      <p>want upcoming melee majors on your calendar? add this link as an external url on any online calender service
+      </p>
       <div class="calendar-url-snippet">
         <pre>https://meleemajors.gg/calendar.ics</pre>
         <button onclick="copyCalendar()"><img src="assets/copyButton.svg" alt="copy button"></button>
