--- a/ssg/src/html/header.html
+++ b/ssg/src/html/header.html
@@ -2,20 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="The Largest Upcoming Melee Events">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="assets/favicon/favicon.webp">
-    <script src="script.js"></script>
-    <script defer src="https://cloud.umami.is/script.js"
-        data-website-id="2e6188c4-56e6-49cc-bd9e-511523dc3fb7"></script>
-    <title>Melee Majors</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="The Largest Upcoming Melee Events">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="assets/favicon/favicon.webp">
+  <script src="script.js"></script>
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="2e6188c4-56e6-49cc-bd9e-511523dc3fb7"></script>
+  <title>Melee Majors</title>
 </head>
 
 <body class="dark-mode">
-    <div class="fixed-position"></div>
-    <h1 class="title">Melee Majors</h1>
-    <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
-    <div class="background-gradient"></div>
-    <div class="card-container">
+  <div class="fixed-position"></div>
+  <h1 class="title">Melee Majors</h1>
+  <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
+  <div class="background-gradient"></div>
+  <div class="card-container">
