--- a/site/index.html
+++ b/site/index.html
@@ -77,13 +77,13 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=601%204th%20Ave%20S%2C%20Nashville%2C%20TN%2037210%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Nashville, TN">
         Nashville, TN
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 191
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 192
     </p>
     <hr>
     <div class="buttons">
       <a href="https://www.start.gg/tournament/warehouse-war-4" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
         data-umami-event-name="Warehouse War 4">Start.gg</a>
-      <a href="https://images.start.gg/images/profileWidgetPageLayout/2476303/image-d275965ff83672fa785f92237cd9b3fb-optimized.png" target="_blank" class="card-button"
+      <a href="assets/schedules/warehouseWar4Schedule.webp" target="_blank" class="card-button"
         data-umami-event="schedule-clicked" data-umami-event-name="Warehouse War 4">Schedule</a>
       <a href="" target="_blank" class="card-button hidden"
         data-umami-event="stream-clicked" data-umami-event-name="Warehouse War 4">Stream</a>
