--- a/site/index.html
+++ b/site/index.html
@@ -41,11 +41,11 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=601%204th%20Ave%20S%2C%20Nashville%2C%20TN%2037210%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Nashville, TN">
         Nashville, TN
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 208
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 213
     </p>
     <hr>
     <div class="buttons">
-      <a href="https://www.start.gg/tournament/tournament/warehouse-war-4/event/melee-singles-saturday" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+      <a href="https://www.start.gg/tournament/warehouse-war-4/event/melee-singles-saturday" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
         data-umami-event-name="Warehouse War 4">Start.gg</a>
       <a href="assets/schedules/warehouseWar4Schedule.webp" target="_blank" class="card-button"
         data-umami-event="schedule-clicked" data-umami-event-name="Warehouse War 4">Schedule</a>
@@ -81,7 +81,7 @@
     </p>
     <hr>
     <div class="buttons">
-      <a href="https://www.start.gg/tournament/tournament/supernova-2024/event/melee-1v1-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+      <a href="https://www.start.gg/tournament/supernova-2024/event/melee-1v1-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
         data-umami-event-name="Supernova 2024">Start.gg</a>
       <a href="" target="_blank" class="card-button hidden"
         data-umami-event="schedule-clicked" data-umami-event-name="Supernova 2024">Schedule</a>
@@ -117,7 +117,7 @@
     </p>
     <hr>
     <div class="buttons">
-      <a href="https://www.start.gg/tournament/tournament/eggdog-invitational/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+      <a href="https://www.start.gg/tournament/eggdog-invitational/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
         data-umami-event-name="Eggdog Invitational">Start.gg</a>
       <a href="" target="_blank" class="card-button hidden"
         data-umami-event="schedule-clicked" data-umami-event-name="Eggdog Invitational">Schedule</a>
@@ -149,11 +149,11 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4001%20E%20Stevens%20Way%20NE%2C%20Seattle%2C%20WA%2098195%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Seattle, WA">
         Seattle, WA
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 345
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 350
     </p>
     <hr>
     <div class="buttons">
-      <a href="https://www.start.gg/tournament/tournament/don-t-park-on-the-grass-2024/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+      <a href="https://www.start.gg/tournament/don-t-park-on-the-grass-2024/event/melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
         data-umami-event-name="Don't Park on the Grass 2024">Start.gg</a>
       <a href="" target="_blank" class="card-button hidden"
         data-umami-event="schedule-clicked" data-umami-event-name="Don't Park on the Grass 2024">Schedule</a>
@@ -162,37 +162,50 @@
     </div>
   </div>
 </div>
-</div>
-<footer>
-  <div class="footer">
-    <div class="calendar-note calendar-note-hidden">
-      <p>want upcoming melee majors on your calendar? add this link as an external url on any online calender service
-      </p>
-      <div class="calendar-url-snippet">
-        <pre>https://meleemajors.gg/calendar.ics</pre>
-        <button onclick="copyCalendar()"><img src="assets/copyButton.svg" alt="copy button"></button>
-      </div>
-    </div>
-    <button onclick="calendarButton(event)" class="calendar-button"
-      data-umami-event="calendar-button-clicked">calendar</button>
-    <button onclick="switchColors(event)" class="theme-toggle" data-umami-event="theme-toggle-clicked">switch to light
-      mode</button>
-    <a href="https://ko-fi.com/meleemajors" target="_blank" data-umami-event="ko-fi-button"><button>buy us a coffee on
-        ko-fi</button></a>
-    <hr>
-    <p>see something wrong? open an issue or pull request on our <a href="https://github.com/jtof-dev/meleemajors.gg"
-        data-umami-event="github-link-clicked" target="_blank">github
-        repo</a></p>
-    <p>this <a href="https://github.com/jtof-dev/meleemajors.gg" target="_blank"
-        data-umami-event="second-github-link-clicked">website</a> is
-      open-source, and is licensed under <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank"
-        data-umami-event="license-link-clicked">agpl-3</a></p>
-    <p>powered by <a href="https://pages.github.com" target="_blank" data-umami-event="github-pages-clicked">github
-        pages</a> | made with love by <a href="https://github.com/jtof-dev" target="_blank"
-        data-umami-event="jtof-github-clicked">jtof</a> and <a href="https://github.com/nathanbabcock" target="_blank"
-        data-umami-event="excalo-github-clicked">excalo</a></p>
+    <!-- begin footer -->
   </div>
-</footer>
+  <footer>
+    <div class="footer">
+      <!-- Email note -->
+      <div class="email-note email-note-hidden">
+        <p>want emails about upcoming melee majors? add your email below - you'll get an email the week before a major, and the day before</p>
+        <input type="email" name="EMAIL" placeholder="your@email.com" id="mce-EMAIL" spellcheck="false">
+        <button onclick="emailSignup(event)">Subscribe</button>
+      </div>
+
+      <!-- Calendar note -->
+      <div class="calendar-note calendar-note-hidden">
+        <p>want upcoming melee majors on your calendar? add this link as an external url on any online calender service
+        </p>
+        <div class="calendar-url-snippet">
+          <pre>https://meleemajors.gg/calendar.ics</pre>
+          <button onclick="copyCalendar()"><img src="assets/copyButton.svg" alt="copy button"></button>
+        </div>
+      </div>
+
+      <!-- Buttons -->
+      <button onclick="emailButton(event)" class="email-button" data-umami-event="email-button-clicked">mailing
+        list</button>
+      <button onclick="calendarButton(event)" class="calendar-button"
+        data-umami-event="calendar-button-clicked">calendar</button>
+      <button onclick="switchColors(event)" class="theme-toggle" data-umami-event="theme-toggle-clicked">switch to light
+        mode</button>
+      <a href="https://ko-fi.com/meleemajors" target="_blank" data-umami-event="ko-fi-button"><button>buy us a coffee on
+          ko-fi</button></a>
+      <hr>
+      <p>see something wrong? open an issue or pull request on our <a href="https://github.com/jtof-dev/meleemajors.gg"
+          data-umami-event="github-link-clicked" target="_blank">github
+          repo</a></p>
+      <p>this <a href="https://github.com/jtof-dev/meleemajors.gg" target="_blank"
+          data-umami-event="second-github-link-clicked">website</a> is
+        open-source, and is licensed under <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank"
+          data-umami-event="license-link-clicked">agpl-3</a></p>
+      <p>powered by <a href="https://pages.github.com" target="_blank" data-umami-event="github-pages-clicked">github
+          pages</a> | made with love by <a href="https://github.com/jtof-dev" target="_blank"
+          data-umami-event="jtof-github-clicked">jtof</a> and <a href="https://github.com/nathanbabcock" target="_blank"
+          data-umami-event="excalo-github-clicked">excalo</a></p>
+    </div>
+  </footer>
 </body>
 
 </html>
