--- a/ssg/src/html/footer.html
+++ b/ssg/src/html/footer.html
@@ -1,34 +1,47 @@
-</div>
-<footer>
-  <div class="footer">
-    <div class="calendar-note calendar-note-hidden">
-      <p>want upcoming melee majors on your calendar? add this link as an external url on any online calender service
-      </p>
-      <div class="calendar-url-snippet">
-        <pre>https://meleemajors.gg/calendar.ics</pre>
-        <button onclick="copyCalendar()"><img src="assets/copyButton.svg" alt="copy button"></button>
-      </div>
-    </div>
-    <button onclick="calendarButton(event)" class="calendar-button"
-      data-umami-event="calendar-button-clicked">calendar</button>
-    <button onclick="switchColors(event)" class="theme-toggle" data-umami-event="theme-toggle-clicked">switch to light
-      mode</button>
-    <a href="https://ko-fi.com/meleemajors" target="_blank" data-umami-event="ko-fi-button"><button>buy us a coffee on
-        ko-fi</button></a>
-    <hr>
-    <p>see something wrong? open an issue or pull request on our <a href="https://github.com/jtof-dev/meleemajors.gg"
-        data-umami-event="github-link-clicked" target="_blank">github
-        repo</a></p>
-    <p>this <a href="https://github.com/jtof-dev/meleemajors.gg" target="_blank"
-        data-umami-event="second-github-link-clicked">website</a> is
-      open-source, and is licensed under <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank"
-        data-umami-event="license-link-clicked">agpl-3</a></p>
-    <p>powered by <a href="https://pages.github.com" target="_blank" data-umami-event="github-pages-clicked">github
-        pages</a> | made with love by <a href="https://github.com/jtof-dev" target="_blank"
-        data-umami-event="jtof-github-clicked">jtof</a> and <a href="https://github.com/nathanbabcock" target="_blank"
-        data-umami-event="excalo-github-clicked">excalo</a></p>
+    <!-- begin footer -->
   </div>
-</footer>
+  <footer>
+    <div class="footer">
+      <!-- Email note -->
+      <div class="email-note email-note-hidden">
+        <p>want emails about upcoming melee majors? add your email below</p>
+        <input type="email" name="EMAIL" placeholder="your@email.com" id="mce-EMAIL" spellcheck="false">
+        <button onclick="emailSignup(event)">Subscribe</button>
+      </div>
+
+      <!-- Calendar note -->
+      <div class="calendar-note calendar-note-hidden">
+        <p>want upcoming melee majors on your calendar? add this link as an external url on any online calender service
+        </p>
+        <div class="calendar-url-snippet">
+          <pre>https://meleemajors.gg/calendar.ics</pre>
+          <button onclick="copyCalendar()"><img src="assets/copyButton.svg" alt="copy button"></button>
+        </div>
+      </div>
+
+      <!-- Buttons -->
+      <button onclick="emailButton(event)" class="email-button" data-umami-event="email-button-clicked">mailing
+        list</button>
+      <button onclick="calendarButton(event)" class="calendar-button"
+        data-umami-event="calendar-button-clicked">calendar</button>
+      <button onclick="switchColors(event)" class="theme-toggle" data-umami-event="theme-toggle-clicked">switch to light
+        mode</button>
+      <a href="https://ko-fi.com/meleemajors" target="_blank" data-umami-event="ko-fi-button"><button>buy us a coffee on
+          ko-fi</button></a>
+      <hr>
+      <p>see something wrong? open an issue or pull request on our <a href="https://github.com/jtof-dev/meleemajors.gg"
+          data-umami-event="github-link-clicked" target="_blank">github
+          repo</a></p>
+      <p>this <a href="https://github.com/jtof-dev/meleemajors.gg" target="_blank"
+          data-umami-event="second-github-link-clicked">website</a> is
+        open-source, and is licensed under <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank"
+          data-umami-event="license-link-clicked">agpl-3</a></p>
+      <p>powered by <a href="https://pages.github.com" target="_blank" data-umami-event="github-pages-clicked">github
+          pages</a> | made with love by <a href="https://github.com/jtof-dev" target="_blank"
+          data-umami-event="jtof-github-clicked">jtof</a> and <a href="https://github.com/nathanbabcock" target="_blank"
+          data-umami-event="excalo-github-clicked">excalo</a></p>
+    </div>
+  </footer>
 </body>
 
 </html>
