feat: add s factor 11

--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,42 @@
   <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
   <div class="background-gradient"></div>
   <div class="card-container">
+<div class="card" data-start-time="1720890000" data-end-time="1721019600">
+  <img src="assets/cards/sFactor11.webp" alt="S Factor 11 banner image" class="image">
+  <div class="card-content">
+    <h2>S Factor 11</h2>
+    <h4>July 13 - July 14</h4>
+    <div class="featured-players">
+      <u>Featured Players</u>
+      <ul class="featured-players-columns">
+        <li>Hungrybox</li>
+        <li>S2J</li>
+        <li>Eddy Mexico</li>
+        <li>TBD</li>
+        <li>Mang0</li>
+        <li>Shroomed</li>
+        <li>Lucky</li>
+        <li>TBD</li>
+      </ul>
+    </div>
+    <hr>
+    <p>
+      <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=Filadelfia%2040%2C%20N%C3%A1poles%2C%20Benito%20Ju%C3%A1rez%2C%2003810%20Ciudad%20de%20M%C3%A9xico%2C%20CDMX%2C%20M%C3%A9xico" target="_blank" data-umami-event="map-link-clicked"
+        data-umami-event-location="Ciudad de México, CDMX">
+        Ciudad de México, CDMX
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 172
+    </p>
+    <hr>
+    <div class="buttons">
+      <a href="https://www.start.gg/tournament/s-factor-11/event/smash-bros-melee-singles" target="_blank" class="card-button" data-umami-event="start-gg-clicked"
+        data-umami-event-name="S Factor 11">Start.gg</a>
+      <a href="" target="_blank" class="card-button hidden"
+        data-umami-event="schedule-clicked" data-umami-event-name="S Factor 11">Schedule</a>
+      <a href="https://www.twitch.tv/vgbootcamp" target="_blank" class="card-button"
+        data-umami-event="stream-clicked" data-umami-event-name="S Factor 11">Stream</a>
+    </div>
+  </div>
+</div>
 <div class="card" data-start-time="1722038400" data-end-time="1722142740">
   <img src="assets/cards/warehouseWar4.webp" alt="Warehouse War 4 banner image" class="image">
   <div class="card-content">
@@ -41,7 +77,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=601%204th%20Ave%20S%2C%20Nashville%2C%20TN%2037210%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Nashville, TN">
         Nashville, TN
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 213
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 227
     </p>
     <hr>
     <div class="buttons">
@@ -54,7 +90,7 @@
     </div>
   </div>
 </div>
-<div class="card" data-start-time="1723129200" data-end-time="1723420800">
+<div class="card" data-start-time="1723127400" data-end-time="1723420800">
   <img src="assets/cards/supernova2024.webp" alt="Supernova 2024 banner image" class="image">
   <div class="card-content">
     <h2>Supernova 2024</h2>
@@ -113,7 +149,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=Vancouver%2C%20BC%2C%20Canada" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Vancouver, BC">
         Vancouver, BC
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 12
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 15
     </p>
     <hr>
     <div class="buttons">
@@ -149,7 +185,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4001%20E%20Stevens%20Way%20NE%2C%20Seattle%2C%20WA%2098195%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Seattle, WA">
         Seattle, WA
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 350
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 364
     </p>
     <hr>
     <div class="buttons">
@@ -168,7 +204,7 @@
     <div class="footer">
       <!-- Email note -->
       <div class="email-note email-note-hidden">
-        <p>want emails about upcoming melee majors? add your email below - you'll get an email the week before a major, and the day before</p>
+        <p>want emails about upcoming melee majors? add your email below</p>
         <input type="email" name="EMAIL" placeholder="your@email.com" id="mce-EMAIL" spellcheck="false">
         <button onclick="emailSignup(event)">Subscribe</button>
       </div>
