chore: add supernova attendees

--- a/site/index.html
+++ b/site/index.html
@@ -18,7 +18,7 @@
   <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
   <div class="background-gradient"></div>
   <div class="card-container">
-<div class="card" data-start-time="1722038400" data-end-time="1722142740">
+<div class="card" data-start-time="1722031200" data-end-time="1722142740">
   <img src="assets/cards/warehouseWar4.webp" alt="Warehouse War 4 banner image" class="image">
   <div class="card-content">
     <h2>Warehouse War 4</h2>
@@ -41,7 +41,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=601%204th%20Ave%20S%2C%20Nashville%2C%20TN%2037210%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Nashville, TN">
         Nashville, TN
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 229
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 251
     </p>
     <hr>
     <div class="buttons">
@@ -62,14 +62,14 @@
     <div class="featured-players">
       <u>Featured Players</u>
       <ul class="featured-players-columns">
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
-        <li>TBD</li>
+        <li>Cody Schwab</li>
+        <li>Jmook</li>
+        <li>Plup</li>
+        <li>Mang0</li>
+        <li>Zain</li>
+        <li>moky</li>
+        <li>Hungrybox</li>
+        <li>Aklo</li>
       </ul>
     </div>
     <hr>
@@ -77,7 +77,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4320%20Chantilly%20Shopping%20Center%2C%20Chantilly%2C%20VA%2020151%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Chantilly, VA">
         Chantilly, VA
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 892
     </p>
     <hr>
     <div class="buttons">
@@ -149,7 +149,7 @@
       <a class="card-location" href="https://www.google.com/maps/search/?api=1&query=4001%20E%20Stevens%20Way%20NE%2C%20Seattle%2C%20WA%2098195%2C%20USA" target="_blank" data-umami-event="map-link-clicked"
         data-umami-event-location="Seattle, WA">
         Seattle, WA
-      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 365
+      </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 392
     </p>
     <hr>
     <div class="buttons">
